--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "sass": "^1.55.0",
         "sass-loader": "^13.0.2",
         "vue-loader": "^17.0.0",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "vue-slick-carousel": "^1.0.6",
+        "vuex": "^4.0.2"
     },
     "dependencies": {
         "vue": "^3.2.36"
