--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "bootstrap-vue": "^2.22.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -18,7 +19,7 @@
         "sass-loader": "^13.0.2",
         "vue-loader": "^17.0.0",
         "vue-router": "^4.1.5",
-        "vue-slick-carousel": "^1.0.6",
+        "vue3-carousel": "^0.1.47",
         "vuex": "^4.0.2"
     },
     "dependencies": {
